--- a/teaparlor/trio-etiquette-quest.html
+++ b/teaparlor/trio-etiquette-quest.html
@@ -375,7 +375,7 @@ body {
     <div class="chat-header">Miss Mischief</div>
     <!-- Character Image Spot -->
 <div id="characterSpot" style="position:absolute; bottom: 350px; right: 50px; z-index: 30; width: 150px; height: 150px; border: 3px solid #b790ff; border-radius: 10px; overflow: hidden; background-color: rgba(255,255,255,0.1); display: flex; align-items: center; justify-content: center;">
-  <img src="YOUR_CHARACTER_IMAGE_URL" alt="Character" style="width: 100%; height: auto;">
+  <img src="https://3society.neocities.org/2026/IMAGES/catlady.jpeg" alt="Character" style="width: 100%; height: auto;">
 </div>
     <div class="chat-messages">
       <div class="instructions">Welcome to the Tea Parlour Quest! Click the umbrella to start, then type your responses and follow the prompts. Enjoy the mystery! 🕵️‍♀️</div>
