--- a/teaparlor/tea1.html
+++ b/teaparlor/tea1.html
@@ -1,219 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Miss Poppins’ Tea Parlour ✨</title>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Miss Poppins’ Tea Wisdom Chamber</title>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
 <style>
-body {
-  margin: 0;
-  font-family: 'Cinzel', serif;
-  background: radial-gradient(circle at center, #1a1a2e, #16213e, #0f3460);
-  color: #f0e6ff;
-  overflow: hidden;
+body{
+  margin:0;
+  height:100vh;
+  background:radial-gradient(ellipse at center,#1b1130 0%,#0a0615 100%);
+  overflow:hidden;
+  font-family:"Cinzel",serif;
+  display:flex;
+  align-items:flex-end;
+  justify-content:center;
+}
+#umbrella-container{
+  position:relative;
+  bottom:50px;
+}
+.umbrella{
+  width:120px;height:120px;
+  cursor:pointer;
+  transition:transform 1s ease;
+}
+.umbrella.open{transform:scale(1.3) rotate(0deg);}
+.umbrella.closed{transform:scale(0.9) rotate(-15deg);}
+.glow{
+  position:absolute;
+  top:-20px;left:50%;
+  transform:translateX(-50%);
+  width:140px;height:140px;
+  border-radius:50%;
+  background:radial-gradient(circle,rgba(200,100,255,0.4),transparent 70%);
+  opacity:0;transition:opacity 1s ease;
+  pointer-events:none;
+}
+.umbrella.open + .glow{opacity:1;animation:shimmer 3s infinite alternate;}
+@keyframes shimmer{
+  from{box-shadow:0 0 10px 2px rgba(200,100,255,0.3);}
+  to{box-shadow:0 0 25px 5px rgba(200,100,255,0.7);}
 }
 
-/* Layout */
-.parlour-container {
-  position: relative;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 4rem;
+/* Rain */
+#rain-layer{
+  position:fixed;
+  top:0;left:0;width:100%;height:100%;
+  pointer-events:none;
+  overflow:hidden;
+  z-index:1;
+}
+.raindrop{
+  position:absolute;
+  top:-10px;width:2px;height:6px;
+  background:rgba(190,150,255,0.7);
+  border-radius:50%;
+  animation:fall linear infinite;
+}
+@keyframes fall{
+  0%{transform:translateY(0);opacity:1;}
+  100%{transform:translateY(120px);opacity:0;}
 }
 
-/* Umbrella */
-.umbrella-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  position: relative;
-  z-index: 10;
-  animation: pulse 4s ease-in-out infinite;
+/* Chat window */
+#chat-window{
+  position:absolute;
+  bottom:160px; /* above umbrella */
+  left:50%;transform:translateX(-50%);
+  width:300px;height:260px;
+  background:rgba(255,255,255,0.07);
+  border:1px solid rgba(220,180,255,0.4);
+  border-radius:16px;
+  backdrop-filter:blur(6px);
+  box-shadow:0 0 30px rgba(200,100,255,0.3);
+  color:#f7eaff;
+  display:flex;flex-direction:column;
+  justify-content:space-between;
+  opacity:0;transition:opacity 1s ease;
+  z-index:2;
 }
-.umbrella-button svg {
-  width: 60px;
-  height: 80px;
-  fill: none;
-  stroke: #b790ff;
-  stroke-width: 2;
-  transition: transform 0.8s ease, width 0.8s ease, opacity 0.4s ease;
+#chat-window.show{opacity:1;}
+#messages{
+  padding:12px;
+  overflow-y:auto;
+  font-size:14px;
 }
-.umbrella-button.glow svg {
-  filter: drop-shadow(0 0 10px #cdb4ff);
+.user-msg{color:#d3bfff;text-align:right;margin:4px 0;}
+.bot-msg{color:#fff;margin:4px 0;}
+#input{
+  border:none;
+  background:rgba(255,255,255,0.1);
+  color:#fff;
+  padding:8px;
+  border-radius:0 0 16px 16px;
+  font-family:"Cinzel",serif;
 }
-@keyframes pulse {
-  0%,100% { filter: drop-shadow(0 0 5px #b790ff); }
-  50% { filter: drop-shadow(0 0 15px #cdb4ff); }
-}
-
-/* Shimmer line */
-.shimmer {
-  position: absolute;
-  left: 50%;
-  bottom: 15px;
-  width: 2px;
-  height: 40px;
-  background: linear-gradient(to top, rgba(183,144,255,0.2), rgba(255,255,255,0.8));
-  border-radius: 2px;
-  transform: translateX(-50%) scaleY(0);
-  opacity: 0;
-}
-
-/* Chat */
-.chat-container {
-  position: absolute;
-  bottom: 130px;
-  width: 320px;
-  background: rgba(255,255,255,0.08);
-  border: 1px solid rgba(255,255,255,0.3);
-  backdrop-filter: blur(6px);
-  border-radius: 20px;
-  padding: 1.2rem;
-  text-align: left;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.6s ease;
-  box-shadow: 0 0 20px rgba(183,144,255,0.4);
-}
-.chat-container.active {
-  opacity: 1;
-  transform: translateY(0);
-}
-.chat-header {
-  font-weight: 600;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-bottom: 0.5rem;
-  color: #d8b4ff;
-}
-.chat-message {
-  font-size: 0.95rem;
-  line-height: 1.5;
-  margin-bottom: 0.8rem;
-  color: #f3eaff;
-}
-.chat-input {
-  width: 100%;
-  padding: 0.6rem;
-  border-radius: 10px;
-  border: none;
-  font-family: 'Cinzel', serif;
-  background-color: rgba(255,255,255,0.15);
-  color: #fff;
-  outline: none;
-}
-.chat-input::placeholder { color: #d0c1f7; }
-
-/* Rain Layer & Drops */
-.rain-layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60%;
-  pointer-events: none;
-  overflow: hidden;
-}
-.raindrop {
-  position: absolute;
-  top: 0;
-  width: 3px;
-  height: 3px;
-  background: rgba(200,150,255,0.9);
-  border-radius: 50%;
-  animation: fall linear infinite;
-  filter: blur(0.5px);
-}
-@keyframes fall {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(120px); opacity: 0; }
-}
+#input:focus{outline:none;}
 </style>
 </head>
 <body>
-<div class="parlour-container">
-  <!-- Rain Layer -->
-  <div id="rainLayer" class="rain-layer"></div>
 
-  <!-- Chat -->
-  <div id="chatContainer" class="chat-container">
-    <div class="chat-header">Miss Poppins</div>
-    <div class="chat-message">“Why hello there, dear! A spot of tea and a thought for the day?” ☕</div>
-    <input class="chat-input" placeholder="Type your reflection here..." />
-  </div>
+<div id="rain-layer"></div>
 
-  <!-- Umbrella -->
-  <button id="umbrellaButton" class="umbrella-button glow">
-    <svg id="umbrellaClosed" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-      <path d="M32 2C28 10 25 18 25 26h14C39 18 36 10 32 2zM32 26v22M32 48a6 6 0 0 0 0 12" />
-    </svg>
-    <svg id="umbrellaOpen" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" style="display:none;">
-      <path d="M32 4C18 4 6 16 2 30h60C58 16 46 4 32 4zM32 30v18M32 48a6 6 0 0 0 0 12" />
-      <path d="M4 30C12 18 24 12 32 12s20 6 28 18" stroke-linecap="round" />
-    </svg>
-    <div id="shimmer" class="shimmer"></div>
-  </button>
+<div id="umbrella-container">
+  <svg id="umbrella" class="umbrella closed" viewBox="0 0 100 100">
+    <path d="M50 10 C30 15,15 40,10 60 H90 C85 40,70 15,50 10 Z" fill="#a66bff"/>
+    <rect x="48" y="60" width="4" height="25" fill="#d3bfff"/>
+  </svg>
+  <div class="glow"></div>
+</div>
+
+<div id="chat-window">
+  <div id="messages"></div>
+  <input id="input" type="text" placeholder="Type your thought & press Enter…">
 </div>
 
 <script>
-const umbrellaBtn = document.getElementById('umbrellaButton');
-const chat = document.getElementById('chatContainer');
-const umbrellaClosed = document.getElementById('umbrellaClosed');
-const umbrellaOpen = document.getElementById('umbrellaOpen');
-const shimmer = document.getElementById('shimmer');
-const rainLayer = document.getElementById('rainLayer');
-let isOpen = false;
+const umbrella=document.getElementById('umbrella');
+const chatWindow=document.getElementById('chat-window');
+const rainLayer=document.getElementById('rain-layer');
+const input=document.getElementById('input');
+const messages=document.getElementById('messages');
 let rainInterval;
+const teaWisdom=[
+  "In Japan, they bow before pouring; in Britain, they pour before gossiping — either way, dear, the key is to stir with grace, not haste!",
+  "A whisk in Kyoto, a spoon in London — both teach patience, but only one leaves froth on one’s upper lip.",
+  "Ah, the Way of Tea! In the East they honour the leaf, in the West they honour the chatter. Perhaps both are quite right — provided one’s manners don’t go cold.",
+  "One might say the British invented teatime — but the Japanese turned it into timelessness."
+];
 
-function createRaindrop() {
-  const drop = document.createElement('div');
+function createRain(){
+  const drop=document.createElement('div');
   drop.classList.add('raindrop');
-  drop.style.left = Math.random() * 100 + '%';
-  drop.style.animationDuration = 2 + Math.random() * 2 + 's';
-  drop.style.opacity = 0.5 + Math.random() * 0.5;
-  drop.style.width = drop.style.height = (2 + Math.random() * 2) + 'px';
+  drop.style.left=Math.random()*window.innerWidth+'px';
+  const dur=2+Math.random()*2;
+  drop.style.animationDuration=dur+'s';
   rainLayer.appendChild(drop);
-
-  // remove after animation to keep DOM light
-  setTimeout(() => drop.remove(), 4000);
+  setTimeout(()=>drop.remove(),dur*1000);
 }
 
-umbrellaBtn.addEventListener('click', () => {
-  isOpen = !isOpen;
-  if (isOpen) {
-    umbrellaClosed.style.display = 'none';
-    umbrellaOpen.style.display = 'block';
-    umbrellaBtn.querySelector('svg').style.width = '90px';
-    umbrellaBtn.querySelector('svg').style.transform = 'translateY(-10px)';
-    chat.classList.add('active');
+function startRain(){rainInterval=setInterval(createRain,120);}
+function stopRain(){clearInterval(rainInterval);}
 
-    shimmer.style.opacity = '1';
-    shimmer.animate([
-      {transform:'translateX(-50%) scaleY(0)', opacity:0},
-      {transform:'translateX(-50%) scaleY(1)', opacity:1},
-      {transform:'translateX(-50%) translateY(-60px) scaleY(0.2)', opacity:0}
-    ],{duration:1500, easing:'ease-out'});
+umbrella.addEventListener('click',()=>{
+  const isClosed=umbrella.classList.contains('closed');
+  if(isClosed){
+    umbrella.classList.remove('closed');umbrella.classList.add('open');
+    chatWindow.classList.add('show');
+    startRain();
+    addMessage("bot","Why hello there, dear! A spot of tea and a thought for the day? ☕");
+  }else{
+    umbrella.classList.remove('open');umbrella.classList.add('closed');
+    chatWindow.classList.remove('show');
+    stopRain();
+  }
+});
 
-    // start rain
-    rainInterval = setInterval(() => {
-      for (let i = 0; i < 4; i++) createRaindrop();
-    }, 300);
-  } else {
-    umbrellaClosed.style.display = 'block';
-    umbrellaOpen.style.display = 'none';
-    umbrellaBtn.querySelector('svg').style.width = '60px';
-    umbrellaBtn.querySelector('svg').style.transform = 'translateY(0)';
-    chat.classList.remove('active');
+function addMessage(sender,text){
+  const msg=document.createElement('div');
+  msg.classList.add(sender==='user'?'user-msg':'bot-msg');
+  msg.textContent=text;
+  messages.appendChild(msg);
+  messages.scrollTop=messages.scrollHeight;
+}
 
-    // stop rain
-    clearInterval(rainInterval);
-    rainLayer.innerHTML = '';
+input.addEventListener('keydown',e=>{
+  if(e.key==='Enter' && input.value.trim()!==''){
+    const text=input.value.trim();
+    addMessage('user',text);
+    input.value='';
+    setTimeout(()=>{
+      const reply=teaWisdom[Math.floor(Math.random()*teaWisdom.length)];
+      addMessage('bot',reply);
+    },800);
   }
 });
 </script>
 </body>
 </html>
+
