--- a/teaparlor/splendor/1.html
+++ b/teaparlor/splendor/1.html
@@ -13,7 +13,7 @@ body{
   font-family:"Cinzel",serif;
   display:flex;align-items:flex-end;justify-content:center;
 }
-#umbrella-container{position:relative;bottom:50px;}
+#umbrella-container{position:relative;bottom:50px;z-index:2;}
 .umbrella{width:120px;height:120px;cursor:pointer;transition:transform 1s ease;}
 .umbrella.open{transform:scale(1.3) rotate(0deg);}
 .umbrella.closed{transform:scale(0.9) rotate(-15deg);}
@@ -51,7 +51,7 @@ body{
   border-radius:16px;backdrop-filter:blur(6px);
   box-shadow:0 0 30px rgba(200,100,255,0.3);
   color:#f7eaff;display:flex;flex-direction:column;justify-content:space-between;
-  opacity:0;transition:opacity 1s ease;z-index:2;
+  opacity:0;transition:opacity 1s ease;z-index:3;
 }
 #chat-window.show{opacity:1;}
 #messages{padding:12px;overflow-y:auto;font-size:14px;}
@@ -80,62 +80,100 @@ body{
 </div>
 
 <script>
-const umbrella=document.getElementById('umbrella');
-const chatWindow=document.getElementById('chat-window');
-const rainLayer=document.getElementById('rain-layer');
-const input=document.getElementById('input');
-const messages=document.getElementById('messages');
-let rainInterval;
-const teaWisdom=[
-  "In Japan, they bow before pouring; in Britain, they pour before gossiping — either way, dear, the key is to stir with grace, not haste!",
-  "A whisk in Kyoto, a spoon in London — both teach patience, but only one leaves froth on one’s upper lip.",
-  "Ah, the Way of Tea! In the East they honour the leaf, in the West they honour the chatter. Perhaps both are quite right — provided one’s manners don’t go cold.",
-  "One might say the British invented teatime — but the Japanese turned it into timelessness."
-];
+document.addEventListener("DOMContentLoaded", () => {
+  const umbrella = document.getElementById('umbrella');
+  const chatWindow = document.getElementById('chat-window');
+  const rainLayer = document.getElementById('rain-layer');
+  const input = document.getElementById('input');
+  const messages = document.getElementById('messages');
+  let rainInterval;
+  const teaWisdom = [
+    "In Japan, they bow before pouring; in Britain, they pour before gossiping — either way, dear, the key is to stir with grace, not haste!",
+    "A whisk in Kyoto, a spoon in London — both teach patience, but only one leaves froth on one’s upper lip.",
+    "Ah, the Way of Tea! In the East they honour the leaf, in the West they honour the chatter. Perhaps both are quite right — provided one’s manners don’t go cold.",
+    "One might say the British invented teatime — but the Japanese turned it into timelessness."
+  ];
 
-/* --- Sound --- */
-let audioCtx;
-function playChime(noteHz){
-  if(!audioCtx) audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-  const osc=audioCtx.createOscillator();
-  const gain=audioCtx.createGain();
-  const delay=audioCtx.createDelay();
-  const feedback=audioCtx.createGain();
+  /* --- Sound --- */
+  let audioCtx;
+  function playChime(noteHz){
+    if(!audioCtx) audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+    const osc=audioCtx.createOscillator();
+    const gain=audioCtx.createGain();
+    const delay=audioCtx.createDelay();
+    const feedback=audioCtx.createGain();
 
-  osc.type="sine";
-  osc.frequency.value=noteHz;
-  gain.gain.setValueAtTime(0.3,audioCtx.currentTime);
-  gain.gain.exponentialRampToValueAtTime(0.001,audioCtx.currentTime+2);
+    osc.type="sine";
+    osc.frequency.value=noteHz;
+    gain.gain.setValueAtTime(0.3,audioCtx.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.001,audioCtx.currentTime+2);
 
-  delay.delayTime.value=0.25;
-  feedback.gain.value=0.3;
-  delay.connect(feedback);
-  feedback.connect(delay);
-  gain.connect(delay);
-  delay.connect(audioCtx.destination);
-  gain.connect(audioCtx.destination);
+    delay.delayTime.value=0.25;
+    feedback.gain.value=0.3;
+    delay.connect(feedback);
+    feedback.connect(delay);
+    gain.connect(delay);
+    delay.connect(audioCtx.destination);
+    gain.connect(audioCtx.destination);
 
-  osc.connect(gain);
-  osc.start();
-  osc.stop(audioCtx.currentTime+2.1);
-}
+    osc.connect(gain);
+    osc.start();
+    osc.stop(audioCtx.currentTime+2.1);
+  }
 
-/* --- Rain --- */
-function createRain(){
-  const drop=document.createElement('div');
-  drop.classList.add('raindrop');
-  drop.style.left=Math.random()*window.innerWidth+'px';
-  const dur=2+Math.random()*2;
-  drop.style.animationDuration=dur+'s';
-  rainLayer.appendChild(drop);
-  setTimeout(()=>drop.remove(),dur*1000);
-}
-function startRain(){rainInterval=setInterval(createRain,120);}
-function stopRain(){clearInterval(rainInterval);}
+  /* --- Rain --- */
+  function createRain(){
+    const drop=document.createElement('div');
+    drop.classList.add('raindrop');
+    drop.style.left=Math.random()*window.innerWidth+'px';
+    const dur=2+Math.random()*2;
+    drop.style.animationDuration=dur+'s';
+    rainLayer.appendChild(drop);
+    setTimeout(()=>drop.remove(),dur*1000);
+  }
+  function startRain(){rainInterval=setInterval(createRain,120);}
+  function stopRain(){clearInterval(rainInterval);}
 
-/* --- Chat --- */
-umbrella.addEventListener('click',()=>{
-  const isClosed=umbrella.classList.contains('closed');
-  if(isClosed){
-    umbrella.classList.remove('closed');umbrella.classList.add('open');
-    chatWind
+  /* --- Chat --- */
+  umbrella.addEventListener('click', () => {
+    const isClosed = umbrella.classList.contains('closed');
+    if (isClosed) {
+      umbrella.classList.remove('closed');
+      umbrella.classList.add('open');
+      chatWindow.classList.add('show');
+      startRain();
+      addMessage("bot", "Why hello there, dear! A spot of tea and a thought for the day? ☕");
+      playChime(349.23); // F4
+    } else {
+      umbrella.classList.remove('open');
+      umbrella.classList.add('closed');
+      chatWindow.classList.remove('show');
+      stopRain();
+      playChime(293.66); // D4
+    }
+  });
+
+  function addMessage(sender, text) {
+    const msg = document.createElement('div');
+    msg.classList.add(sender === 'user' ? 'user-msg' : 'bot-msg');
+    msg.textContent = text;
+    messages.appendChild(msg);
+    messages.scrollTop = messages.scrollHeight;
+  }
+
+  input.addEventListener('keydown', e => {
+    if (e.key === 'Enter' && input.value.trim() !== '') {
+      const text = input.value.trim();
+      addMessage('user', text);
+      input.value = '';
+      setTimeout(() => {
+        const reply = teaWisdom[Math.floor(Math.random() * teaWisdom.length)];
+        addMessage('bot', reply);
+      }, 800);
+    }
+  });
+});
+</script>
+</body>
+</html>
+
