--- a/quest1.0/final-save.html
+++ b/quest1.0/final-save.html
@@ -268,7 +268,7 @@ if(!localStorage.getItem('chatStarted')){
 
 // === Virtue Shelf ===
 const virtueLore = {
-  v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://en.wikipedia.org/wiki/Etiquette"},
+  v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://x3nb.github.io/teaparlor/teaparlor/splendor/fancyparasolchat.html"},
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://www.gutenberg.org/ebooks/14568"},
   v3:{title:"Herb Garden",text:"🪞Chamomile soothes both stomach and spirit.",link:"https://www.herbalgram.org/"},
   v4:{title:"Proverbs",text:"🌷‘Kind words are short and easy to speak, but their echoes are endless.’",link:"https://www.phrases.org.uk/meanings/proverbs.html"},
