--- a/quest1.0/final-save.html
+++ b/quest1.0/final-save.html
@@ -271,7 +271,7 @@ const virtueLore = {
   v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://x3nb.github.io/teaparlor/teaparlor/splendor/fancyparasolchat.html"},
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/members/star/Starmystery.mp4"},
   v3:{title:"Herb Garden",text:"🪞Chamomile soothes both stomach and spirit.",link:"https://x3nb.github.io/starcup/Milo/flippablebiocard.html"},
-  v4:{title:"Proverbs",text:"🌷‘Kind words are short and easy to speak, but their echoes are endless.’",link:"https://www.phrases.org.uk/meanings/proverbs.html"},
+  v4:{title:"Proverbs",text:"🌷‘Kind words are short and easy to speak, but their echoes are endless.’",link:"https://x3nb.github.io/shrinkingviolets/members/starry.mp4"},
   v5:{title:"Poetry",text:"✨‘The world is full of magical things patiently waiting for our senses to grow sharper.’",link:"https://x3nb.github.io/teaparlor/err-tiquette/teachat2.html"}
 };
 
