--- a/teaparlor/audio interactive/index.html
+++ b/teaparlor/audio interactive/index.html
@@ -269,7 +269,7 @@ if(!localStorage.getItem('chatStarted')){
 // === Virtue Shelf ===
 const virtueLore = {
   v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://x3nb.github.io/teaparlor/teaparlor/splendor/fancyparasolchat.html"},
-  v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/members/star/Starmystery.mp4"},
+  v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/audiobook/index.html"},
   v3:{title:"Herb Garden",text:"🪞Chamomile soothes both stomach and spirit.",link:"https://x3nb.github.io/starcup/Milo/flippablebiocard.html"},
   v4:{title:"TeaSnob",text:"🦇‘There is no trouble so great or grave that cannot be diminished by a nice cup of tea.’",link:"https://x3nb.github.io/shrinkingviolets/members/hanschat/index.html"},
   v5:{title:"Poetry",text:"✨🔥 Legends are but truths told sideways.” – Bernard-Paul Heroux.’",link:"https://x3nb.github.io/teaparlor/err-tiquette/teachat2.html"}
