--- a/teaparlor/audio interactive/index.html
+++ b/teaparlor/audio interactive/index.html
@@ -270,9 +270,9 @@ if(!localStorage.getItem('chatStarted')){
 const virtueLore = {
   v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://x3nb.github.io/teaparlor/teaparlor/splendor/fancyparasolchat.html"},
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/audiobook/index.html"},
-  v3:{title:"Chat",text:"🪞Chamomile soothes both stomach and spirit.",link:"https://x3nb.github.io/teaparlor/teaparlor/chatty/hello/index.html"},
+  v3:{title:"Chat",text:"🪞Mystery-Chat.",link:"https://x3nb.github.io/teaparlor/teaparlor/chatty/hello/index.html"},
   v4:{title:"TeaSnob",text:"🦇‘There is no trouble so great or grave that cannot be diminished by a nice cup of tea.’",link:"https://x3nb.github.io/shrinkingviolets/members/hanschat/index.html"},
-  v5:{title:"Poetry",text:"✨🔥 Legends are but truths told sideways.” – Bernard-Paul Heroux.’",link:"https://x3nb.github.io/teaparlor/err-tiquette/teachat2.html"}
+  v5:{title:"Poetry",text:"✨🔥 Legends are but truths told sideways.– Bernard-Paul Heroux.",link:"https://x3nb.github.io/teaparlor/err-tiquette/teachat2.html"}
 };
 
 // Restore completed virtues
