--- a/teaparlor/audio interactive/index.html
+++ b/teaparlor/audio interactive/index.html
@@ -270,7 +270,7 @@ if(!localStorage.getItem('chatStarted')){
 const virtueLore = {
   v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://x3nb.github.io/teaparlor/teaparlor/splendor/fancyparasolchat.html"},
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/audiobook/index.html"},
-  v3:{title:"Chat",text:"🪞Mystery-Chat.",link:"https://x3nb.github.io/teaparlor/teaparlor/chatty/hello/index.html"},
+  v3:{title:"Library",text:"🪞Mystery-Chat.",link:"library/glitchedbookherbs"},
   v4:{title:"TeaSnob",text:"🦇‘There is no trouble so great or grave that cannot be diminished by a nice cup of tea.’",link:"https://x3nb.github.io/shrinkingviolets/members/hanschat/index.html"},
   v5:{title:"Trivia",text:"✨🔥 The Shrinking Violets.",link:"https://x3nb.github.io/shrinkingviolets/quests/triviagame/index.html"}
 };
