--- a/poppins-parlour.html
+++ b/poppins-parlour.html
@@ -400,7 +400,7 @@ function releaseNotes(){
 const virtueLore = {
   v1:{title:"Etiquette",text:"☁️ Good manners are love made visible.",link:"https://en.wikipedia.org/wiki/Etiquette"},
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://www.gutenberg.org/ebooks/14568"},
-  v3:{title:"Herb Library",text:"🪞Chamomile soothes both stomach and spirit.",link:"teaparlor/herbs.html"},
+  v3:{title:"Herb Library",text:"🪞Chamomile soothes both stomach and spirit.",link:"library/glitchedbookherbs/index.html"},
   v4:{title:"Proverbs",text:"🌷‘Kind words are short and easy to speak, but their echoes are endless.’",link:"https://www.phrases.org.uk/meanings/proverbs.html"},
   v5:{title:"Poetry",text:"✨‘The world is full of magical things patiently waiting for our senses to grow sharper.’",link:"https://www.poetryfoundation.org/"}
 };
