--- a/teaparlor/audio interactive/index.html
+++ b/teaparlor/audio interactive/index.html
@@ -272,7 +272,7 @@ const virtueLore = {
   v2:{title:"Lore",text:"🔥 Legends are but truths told sideways.",link:"https://x3nb.github.io/Soundcafe/audiobook/index.html"},
   v3:{title:"Library",text:"🪞Mystery-Chat.",link:"library/glitchedbookherbs"},
   v4:{title:"TeaSnob",text:"🦇‘There is no trouble so great or grave that cannot be diminished by a nice cup of tea.’",link:"https://x3nb.github.io/shrinkingviolets/members/hanschat/index.html"},
-  v5:{title:"Trivia",text:"✨🔥 The Shrinking Violets.",link:"https://x3nb.github.io/shrinkingviolets/quests/triviagame/index.html"}
+  v5:{title:"Trivia",text:"✨The Shrinking Violets.",link:"https://x3nb.github.io/shrinkingviolets/quests/triviagame/index.html"}
 };
 
 // Restore completed virtues
