--- a/hans-full-mosaic/index.html
+++ b/hans-full-mosaic/index.html
@@ -125,7 +125,7 @@
 
 const thumbnails = {
     star: "images/star.png",
-    hans: "images/hans.png",
+    hans: "images/hans-1.png",
     cafeExterior: "images/cafe-exterior.png",
     cafeInterior: "images/cafe-interior.png",
     loreRoom: "images/lore-room.png",
