--- a/hans-full-mosaic/hans_star/index.html
+++ b/hans-full-mosaic/hans_star/index.html
@@ -105,7 +105,22 @@
 </head>
 
 <body>
-
+<div style="
+    position:fixed;
+    top:10px;
+    right:10px;
+    z-index:50;
+">
+    <button onclick="openCodex()" style="
+        background:#6f2cff;
+        padding:10px 14px;
+        border:none;
+        border-radius:6px;
+        color:white;
+        cursor:pointer;
+        box-shadow:0 0 10px #a77cff;
+    ">Codex</button>
+</div>
 <!-- ==================== GALLERY ======================= -->
 <div class="gallery" id="gallery"></div>
 
